Changed graphs to be printed in english.

--- a/MONITOREO.ipynb
+++ b/MONITOREO.ipynb
@@ -104,7 +104,7 @@
     "        time.sleep(monitoring_interval)\n",
     "\n",
     "except KeyboardInterrupt:\n",
-    "    print(\"Monitoreo finalizado.\")\n",
+    "    print(\"Monitoring ended.\")\n",
     "    \n",
     "    # Generar gráficos al finalizar el monitoreo\n",
     "    generate_gpu_usage_graph(gpu_data)\n",
@@ -133,7 +133,7 @@
     "# Función para generar gráficos\n",
     "def generate_gpu_usage_graph(gpu_data):\n",
     "    if not gpu_data:\n",
-    "        print(\"No hay datos para graficar.\")\n",
+    "        print(\"There is no data available.\")\n",
     "        return\n",
     "    \n",
     "    timestamps = [entry[\"timestamp\"] for entry in gpu_data]\n",
@@ -147,19 +147,19 @@
     "    plt.figure(figsize=(14, 6))\n",
     "\n",
     "    plt.subplot(1, 2, 1)\n",
-    "    plt.plot(time_relative, vram_usages, label='Uso de VRAM (MB)', color='blue')\n",
-    "    plt.xlabel('Tiempo (minutos)')\n",
-    "    plt.ylabel('Uso de VRAM (MB)')\n",
-    "    plt.title('Uso de VRAM a lo Largo del Tiempo')\n",
+    "    plt.plot(time_relative, vram_usages, label='VRAM Usage (MB)', color='blue')\n",
+    "    plt.xlabel('Time (minutes)')\n",
+    "    plt.ylabel('VRAM Usage (MB)')\n",
+    "    plt.title('VRAM Usage Over Time')\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
     "\n",
     "    # Crear gráfica de consumo de potencia\n",
     "    plt.subplot(1, 2, 2)\n",
-    "    plt.plot(time_relative, power_draws, label='Consumo de Potencia (W)', color='orange')\n",
-    "    plt.xlabel('Tiempo (minutos)')\n",
-    "    plt.ylabel('Consumo de Potencia (W)')\n",
-    "    plt.title('Consumo de Potencia a lo Largo del Tiempo')\n",
+    "    plt.plot(time_relative, power_draws, label='Power Consumption (W)', color='orange')\n",
+    "    plt.xlabel('Time (minutes)')\n",
+    "    plt.ylabel('Power Consumption (W)')\n",
+    "    plt.title('Power Consumption Over Time')\n",
     "    plt.grid(True)\n",
     "    plt.legend()\n",
     "\n",
@@ -171,7 +171,7 @@
     "# Función para calcular el coste total del entrenamiento\n",
     "def calculate_training_cost(gpu_data, price_per_kwh):\n",
     "    if len(gpu_data) < 2:\n",
-    "        print(\"No hay suficientes datos para calcular el coste.\")\n",
+    "        print(\"There is not enough data to calculate the cost.\")\n",
     "        return 0.0\n",
     "    \n",
     "    total_energy_kwh = 0.0\n",
@@ -194,10 +194,10 @@
     "            gpu_data = json.load(f)\n",
     "            return gpu_data\n",
     "    except FileNotFoundError:\n",
-    "        print(f\"El archivo {file_path} no existe.\")\n",
+    "        print(f\"File {file_path} is non existant.\")\n",
     "        return []\n",
     "    except json.JSONDecodeError:\n",
-    "        print(f\"Error al decodificar el archivo JSON {file_path}.\")\n",
+    "        print(f\"Error while decoding the JSON file {file_path}.\")\n",
     "        return []\n",
     "\n",
     "# Ejecutar las funciones\n",
@@ -209,9 +209,9 @@
     "\n",
     "    # Calcular y mostrar el coste total del entrenamiento\n",
     "    total_cost = calculate_training_cost(gpu_data, price_per_kwh)\n",
-    "    print(f\"Coste total del entrenamiento: {total_cost:.2f} euros\")\n",
+    "    print(f\"Total training cost: {total_cost:.2f} euros\")\n",
     "else:\n",
-    "    print(\"No se encontraron datos para procesar.\")\n"
+    "    print(\"No data was found for processing.\")\n"
    ]
   }
  ],
